welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:8: error: not found: value marquer
  marquer()
  ^PictureMono2:12: error: not found: value marquer
  marquer()
  ^PictureMono2:18: error: not found: value marquer
  marquer()
  ^