welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
  fairemotif()
}

def faireV() {
  avance()
  avance()
  marquer()
  avance()
  gauche()
  avance()
  marquer()
  gauche()
  gauche()
  avance()
  gauche()
  avance()
  marquer()
  avance()
  avance()
  gauche()
}
def fairemotif() {
  faireV()
  faireV()
  faireV()
  faireV()
  avance(7)
  faireV()
  faireV()
  faireV()
  faireV()
  avance(7)
  faireV()
  faireV()
  faireV()
  faireV()
  avance(7)
  avance()
  gauche()
  avance(7)
  droite()
}